--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-client",
+  "name": "mcp-client",
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
@@ -11,7 +11,7 @@
     "axios": "^1.8.4",
     "dotenv": "^16.3.1",
     "openai": "^4.91.1",
-    "weather-client": "file:",
+    "mcp-client": "file:",
     "zod": "^3.22.4"
   },
   "devDependencies": {
